# anonymizer-agent

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker_cd.yml  rust_ci.yml
migrations/2020-04-10-213637_create_elections/: up.sql
migrations/2020-04-10-213641_create_votes/: up.sql
migrations/2020-04-18-213637_create_nonces/: up.sql
src/: main.rs
src/database/: executor.rs  schema.rs
src/database/connection/: messages.rs  mod.rs
src/handlers/: nonce.rs
src/models/: mod.rs  nonce.rs  vote.rs
src/models/db/: db_election.rs  db_nonce.rs  db_vote.rs  mod.rs
